--- a/app/app.component.html
+++ b/app/app.component.html
@@ -2,6 +2,11 @@
 <div [style.color]="wardsColor">
   Hello {{name}}
 </div>
+
+<input type="text" [value]="name" (keyup)="name=$event.target.value">
+
+<input type="text" [(ngModel)]="name">
+
 <button (click)="changeSuitColor()">
   Change Suit Color
 </button>
